--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "ccxt": "^1.79.88",
     "cors": "^2.8.5",
     "create-hmac": "^1.1.7",
     "next": "12.1.5",
