--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "12.1.5",
     "next-connect": "^0.12.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.24",
