--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.5",
     "next-connect": "^0.12.2",
     "react": "18.0.0",
+    "react-data-table-component": "^7.5.0",
     "react-dom": "18.0.0",
     "swr": "^1.3.0"
   },
