--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
+    "ccxt": "^1.80.61",
+    "create-hmac": "^1.1.7",
     "next": "^12.0.4",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.5.0",
     "react-dom": "^17.0.2",
     "swr": "^1.2.2"
   },
