--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-data-table-component": "^7.5.0",
     "react-dom": "^17.0.2",
+    "react-multi-select-component": "^4.2.5",
     "swr": "^1.2.2"
   },
   "devDependencies": {
